[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/GUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Picture.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/DIGITALDREAM.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Font/GUINumber.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="GUI" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1026.0
margin_bottom = 598.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Game" type="PanelContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel/Game"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1019.0
margin_bottom = 591.0
tab_align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="SPRITES" type="VBoxContainer" parent="Panel/Game/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprites" type="VBoxContainer" parent="Panel/Game/TabContainer/SPRITES"]
margin_right = 1004.0
margin_bottom = 535.0
__meta__ = {
"_edit_lock_": true
}

[node name="Frames" type="HBoxContainer" parent="Panel/Game/TabContainer/SPRITES/Sprites"]
margin_right = 1004.0
margin_bottom = 23.0

[node name="FrameID" type="Label" parent="Panel/Game/TabContainer/SPRITES/Sprites/Frames"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 4 )
text = "899"

[node name="NextFrame" type="Button" parent="Panel/Game/TabContainer/SPRITES/Sprites/Frames"]
margin_left = 44.0
margin_right = 69.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "+"

[node name="LastFrame" type="Button" parent="Panel/Game/TabContainer/SPRITES/Sprites/Frames"]
margin_left = 73.0
margin_right = 98.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "-"

[node name="HSeparator" type="HSeparator" parent="Panel/Game/TabContainer/SPRITES/Sprites"]
margin_top = 27.0
margin_right = 1004.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 5 )

[node name="Title" type="HBoxContainer" parent="Panel/Game/TabContainer/SPRITES/Sprites"]
margin_top = 36.0
margin_right = 1004.0
margin_bottom = 60.0

[node name="LOADSPRITE" type="Button" parent="Panel/Game/TabContainer/SPRITES/Sprites/Title"]
margin_right = 109.0
margin_bottom = 24.0
text = "IMPORT SPRITE"

[node name="MOVE" type="CheckBox" parent="Panel/Game/TabContainer/SPRITES/Sprites/Title"]
margin_left = 113.0
margin_right = 179.0
margin_bottom = 24.0
text = "MOVE"

[node name="MOVECAMERA" type="CheckBox" parent="Panel/Game/TabContainer/SPRITES/Sprites/Title"]
margin_left = 183.0
margin_right = 264.0
margin_bottom = 24.0
text = "CAMERA"

[node name="SpriteViewport" type="ViewportContainer" parent="Panel/Game/TabContainer/SPRITES/Sprites"]
margin_top = 64.0
margin_right = 1004.0
margin_bottom = 514.0
rect_min_size = Vector2( 1000, 450 )
stretch = true
__meta__ = {
"_edit_lock_": true
}

[node name="Viewport" type="Viewport" parent="Panel/Game/TabContainer/SPRITES/Sprites/SpriteViewport"]
size = Vector2( 1004, 450 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Picture" parent="Panel/Game/TabContainer/SPRITES/Sprites/SpriteViewport/Viewport" instance=ExtResource( 2 )]
position = Vector2( 522, 396 )

[node name="Info" type="HBoxContainer" parent="Panel/Game/TabContainer/SPRITES/Sprites"]
margin_top = 518.0
margin_right = 1004.0
margin_bottom = 535.0

[node name="X" type="Label" parent="Panel/Game/TabContainer/SPRITES/Sprites/Info"]
margin_right = 52.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "X = "

[node name="Xpos" type="Label" parent="Panel/Game/TabContainer/SPRITES/Sprites/Info"]
margin_left = 56.0
margin_right = 69.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="VSeparator" type="VSeparator" parent="Panel/Game/TabContainer/SPRITES/Sprites/Info"]
margin_left = 73.0
margin_right = 77.0
margin_bottom = 17.0

[node name="Y" type="Label" parent="Panel/Game/TabContainer/SPRITES/Sprites/Info"]
margin_left = 81.0
margin_right = 133.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Y = "

[node name="Ypos" type="Label" parent="Panel/Game/TabContainer/SPRITES/Sprites/Info"]
margin_left = 137.0
margin_right = 150.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ANIMATIONS" type="VBoxContainer" parent="Panel/Game/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Animation" type="HBoxContainer" parent="Panel/Game/TabContainer/ANIMATIONS"]
margin_right = 1008.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_right = 33.0
margin_bottom = 24.0
text = "GO"

[node name="IDAni" type="LineEdit" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 37.0
margin_right = 95.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )

[node name="ID" type="Label" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 99.0
margin_top = 1.0
margin_right = 131.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "99"

[node name="Up" type="Button" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 135.0
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
text = "+"

[node name="Down" type="Button" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 164.0
margin_right = 189.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
text = "-"

[node name="AniName" type="LineEdit" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 193.0
margin_right = 343.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
text = "Animation"

[node name="SetAni" type="Button" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 347.0
margin_right = 379.0
margin_bottom = 24.0
text = "Set"

[node name="AniLabel" type="Label" parent="Panel/Game/TabContainer/ANIMATIONS/Animation"]
margin_left = 383.0
margin_top = 5.0
margin_right = 491.0
margin_bottom = 19.0
text = "Animation Name"

[node name="HSeparator" type="HSeparator" parent="Panel/Game/TabContainer/ANIMATIONS"]
margin_top = 28.0
margin_right = 1008.0
margin_bottom = 32.0

[node name="ButtonsH" type="HBoxContainer" parent="Panel/Game/TabContainer/ANIMATIONS"]
margin_top = 36.0
margin_right = 1008.0
margin_bottom = 56.0

[node name="ButtonsV" type="VBoxContainer" parent="Panel/Game/TabContainer/ANIMATIONS/ButtonsH"]
margin_right = 43.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="Panel/Game/TabContainer/ANIMATIONS/ButtonsH/ButtonsV"]
margin_right = 43.0
margin_bottom = 20.0
text = "PLAY"

[node name="SpriteImport" type="FileDialog" parent="."]
margin_left = 187.0
margin_top = 118.048
margin_right = 891.0
margin_bottom = 510.048
window_title = "Open File(s)"
resizable = true
dialog_text = "Open the sprite to import"
dialog_hide_on_ok = true
mode = 1
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/cristian/Documents/GitHub/Fighter-Maker-2020/Editor/Editor (GUI)"
current_path = "/Users/cristian/Documents/GitHub/Fighter-Maker-2020/Editor/Editor (GUI)/"
[connection signal="pressed" from="Panel/Game/TabContainer/SPRITES/Sprites/Frames/NextFrame" to="." method="_on_NextFrame_pressed"]
[connection signal="pressed" from="Panel/Game/TabContainer/SPRITES/Sprites/Frames/LastFrame" to="." method="_on_LastFrame_pressed"]
[connection signal="pressed" from="Panel/Game/TabContainer/SPRITES/Sprites/Title/LOADSPRITE" to="." method="_on_LOADSPRITE_pressed"]
[connection signal="pressed" from="Panel/Game/TabContainer/SPRITES/Sprites/Title/MOVE" to="Panel/Game/TabContainer/SPRITES/Sprites/SpriteViewport/Viewport/Picture" method="_on_MOVE_pressed"]
[connection signal="pressed" from="Panel/Game/TabContainer/SPRITES/Sprites/Title/MOVECAMERA" to="Panel/Game/TabContainer/SPRITES/Sprites/SpriteViewport/Viewport/Picture" method="_on_MOVECAMERA_pressed"]
[connection signal="files_selected" from="SpriteImport" to="." method="_on_SpriteImport_files_selected"]
